cmake_minimum_required(VERSION 3.24)
project(C___Tutorial)

set(CMAKE_CXX_STANDARD 17)

add_executable(C___Tutorial Basics/HelloWorld.cpp)
add_executable(C___Tutorial_0 Basics/C++_Comments.cpp)
add_executable(C___Tutorial_1 Basics/CoutDemo.cpp)
add_executable(C___Tutorial_2 Basics/CinDemo.cpp)
add_executable(C___Tutorial_3 TypeCasting/C++_Implicit_TypeCasting.cpp)
add_executable(C___Tutorial_4 TypeCasting/C++_Explicit_TypeCasting.cpp)
add_executable(C___Tutorial_5 Control_Flow_Statements/Conditional_Statements/IF_Statement.cpp)
add_executable(C___Tutorial_6 Control_Flow_Statements/Conditional_Statements/IF-Else.cpp)
add_executable(C___Tutorial_7 Control_Flow_Statements/Conditional_Statements/IF-Else-Ladder.cpp)
add_executable(C___Tutorial_8 Control_Flow_Statements/Conditional_Statements/Nested_IF-Else.cpp)
add_executable(C___Tutorial_9 Control_Flow_Statements/Conditional_Statements/Switch_Case.cpp)
add_executable(C___Tutorial_10 Control_Flow_Statements/Looping_Statements/For_Loops/ForLoopDemo.cpp)
add_executable(C___Tutorial_11 Control_Flow_Statements/Looping_Statements/For_Loops/Nested_ForLoops.cpp)
add_executable(C___Tutorial_12 Control_Flow_Statements/Looping_Statements/For_Loops/Infinite_ForLoop.cpp)
add_executable(C___Tutorial_13 Control_Flow_Statements/Looping_Statements/WhileLoops/WhileLoopsDemo.cpp)
add_executable(C___Tutorial_14 Control_Flow_Statements/Looping_Statements/WhileLoops/Nested_WhileLoops.cpp)
add_executable(C___Tutorial_15 Control_Flow_Statements/Looping_Statements/WhileLoops/Infinite_WhileLoops.cpp)
add_executable(C___Tutorial_16 Control_Flow_Statements/Looping_Statements/Do_WhileLoops/do_WhileLoops.cpp)
add_executable(C___Tutorial_17 Control_Flow_Statements/Looping_Statements/Do_WhileLoops/Nested_doWhileLoops.cpp)
add_executable(C___Tutorial_18 Control_Flow_Statements/Looping_Statements/Do_WhileLoops/Infinite_doWhileLoops.cpp)
add_executable(C___Tutorial_19 Control_Flow_Statements/Misc/Break_Statement.cpp)
add_executable(C___Tutorial_20 Control_Flow_Statements/Misc/BreakWithInnerLoop.cpp)
add_executable(C___Tutorial_21 Control_Flow_Statements/Misc/Continue_Statement.cpp)
add_executable(C___Tutorial_22 Control_Flow_Statements/Misc/ContinueWithInnerLoop.cpp)
add_executable(C___Tutorial_23 Control_Flow_Statements/Misc/Goto_Statement.cpp)
add_executable(C___Tutorial_24 Functions/FunctionDemo1.cpp)
add_executable(C___Tutorial_25 Functions/FunctionDemo2.cpp)
add_executable(C___Tutorial_26 Programs/SumofNaturalNumbers.cpp)
add_executable(C___Tutorial_27 Programs/Fibonacci_Series.cpp)
add_executable(C___Tutorial_28 Programs/SwappingTwoNumbers.cpp)
add_executable(C___Tutorial_29 Functions/CallByValueSwap.cpp)
add_executable(C___Tutorial_30 Functions/CallByReferenceSwap.cpp)
add_executable(C___Tutorial_31 Demo/Demo.cpp)
add_executable(C___Tutorial_32 Functions/Recursion/Factorial.cpp)
add_executable(C___Tutorial_33 Functions/Recursion/SumOfNaturalNumbers.cpp)
add_executable(C___Tutorial_34 Functions/Recursion/Fibonacci.cpp)
add_executable(C___Tutorial_35 Arrays/SingleDimensional/Array.cpp)
add_executable(C___Tutorial_36 Arrays/SingleDimensional/TraversalFOrEachLoop.cpp)
add_executable(C___Tutorial_37 Arrays/SingleDimensional/SumandAverageofArray.cpp)
add_executable(C___Tutorial_38 Arrays/SingleDimensional/DisplayArrayElements.cpp)
add_executable(C___Tutorial_39 Arrays/ArrayToFunction/PrintArrayElements.cpp)
add_executable(C___Tutorial_40 Arrays/ArrayToFunction/ArrayToFunctionMaximum.cpp)
add_executable(C___Tutorial_41 Arrays/MultiDimensionalArray/MultiDArray.cpp)
add_executable(C___Tutorial_42 Pointers/PointerExample.cpp)
add_executable(C___Tutorial_43 Pointers/PointersSwapWithoutThirdVariable.cpp)
add_executable(C___Tutorial_45 Pointers/ArrayOfPointers/ArrayNameAsPointer.cpp)
add_executable(C___Tutorial_46 Pointers/ArrayOfPointers/ArrayOfPointers.cpp)
add_executable(C___Tutorial_47 Pointers/VoidPointer.cpp)
add_executable(C___Tutorial_48 Pointers/VoidPointerTypeCasting.cpp)
add_executable(C___Tutorial_49 Pointers/ReferenceVariableExample1.cpp)
add_executable(C___Tutorial_50 Pointers/ReferenceVariableExample2.cpp)
add_executable(C___Tutorial_51 Pointers/ReferenceVariableExample3.cpp)
add_executable(C___Tutorial_52 StructuresAndUnions/StructureExample1.cpp)
add_executable(C___Tutorial_53 StructuresAndUnions/UnionsExample1.cpp)
add_executable(C___Tutorial_54 Pointers/PrintingPointers.cpp)
add_executable(C___Tutorial_55 Pointers/DoublePointers.cpp)
add_executable(C___Tutorial_56 C++OOPs/HelloWorldCLass.cpp)
add_executable(C___Tutorial_57 C++OOPs/ClassesAndObjects.cpp)
add_executable(C___Tutorial_58 C++OOPs/ClassesObjectsWithMethods.cpp)
add_executable(C___Tutorial_59 C++OOPs/Constructors/DefaultConstructor.cpp)
add_executable(C___Tutorial_60 C++OOPs/Constructors/ParameterizedConstructors.cpp)
add_executable(C___Tutorial_61 C++OOPs/Constructors/Destructors.cpp)
add_executable(C___Tutorial_62 C++OOPs/ThisKeyword.cpp)
add_executable(C___Tutorial_63 C++OOPs/Static.cpp)
add_executable(C___Tutorial_64 C++OOPs/FriendFunction.cpp)
add_executable(C___Tutorial_65 C++OOPs/FriendClass.cpp)
add_executable(C___Tutorial_66 C++OOPs/Inheritance/SingleLevel.cpp)
add_executable(C___Tutorial_67 C++OOPs/Inheritance/MultiLevel.cpp)
add_executable(C___Tutorial_68 C++OOPs/Inheritance/Hierarchical.cpp)
add_executable(C___Tutorial_69 C++OOPs/Inheritance/Multiple.cpp)
add_executable(C___Tutorial_70 C++OOPs/Inheritance/AmbiquityResolution.cpp)
add_executable(C___Tutorial_71 C++OOPs/Aggregation.cpp)
add_executable(C___Tutorial_72 C++OOPs/Polymorphism/Overriding.cpp)
add_executable(C___Tutorial_73 C++OOPs/Polymorphism/PolymorphsimExample.cpp)
add_executable(C___Tutorial_74 C++OOPs/Polymorphism/Overloading.cpp)
add_executable(C___Tutorial_75 C++OOPs/Polymorphism/OperatorOverloading.cpp)
add_executable(C___Tutorial_76 C++OOPs/Encapsulation/Encapsulation.cpp)
add_executable(C___Tutorial_77 C++OOPs/Abstraction/AbstractionExample.cpp)
add_executable(C___Tutorial_78 Dynamic_Memory_Allocation/Malloc.cpp)
add_executable(C___Tutorial_79 Dynamic_Memory_Allocation/Calloc.cpp)
add_executable(C___Tutorial_80 Dynamic_Memory_Allocation/NewDeleteDMA.cpp)
add_executable(C___Tutorial_81 Dynamic_Memory_Allocation/Realloc.cpp)
add_executable(C___Tutorial_82 DataStructures/Arrays/ArraysCpp.cpp)
add_executable(C___Tutorial_83 DataStructures/Linked_Lists/LinkedLists.cpp)
add_executable(C___Tutorial_84 Pointers/CppPointers.cpp)
add_executable(C___Tutorial_85 Pointers/VoidPointerFunction.cpp)
add_executable(C___Tutorial_86 Programs/PrimeNumbers.cpp)



